--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   <name>exp2-jenkins</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
+  <!-- <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-  </properties>
+  </properties> -->
 
   <dependencies>
     <dependency>
@@ -45,15 +45,6 @@
               <mainClass>DevOps.App</mainClass>
             </manifest>
           </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
